// Public Relations definitions

syntax = "proto3";

package lib;

option go_package = "github.com/sourcenetwork/source-zanzibar/lib/types";

import "google/protobuf/any.proto";

enum RelationType {
    // Represents a relation from an ACTORSET to an OBJECT node.
    // used to express some relation between the source object and target object.
    OBJECT_RELATION = 0;

    // Represents an authorization grant between an ACTORSET and an ACTOR node
    // Effectively sets a relation between source object and dest actor
    GRANT = 1;

    // Represents a delegated relation between two ACTORSET nodes.
    // Delegation is used to build indirect relations between users
    DELEGATION = 2;
}

// Identifies a system entity
message Id  {
    string namespace = 1;
    string id = 2;
}

// Relate two generic system objects
message ObjectRelation  {
    Id object = 1;
    string relation = 2;
    Id subject = 3;
}

// Grant a relation to a system actor
message GrantRelation  {
    Id object = 1;
    string relation = 2;
    Id actor = 3;
}

// Delegate `relation` from `object` to any actor
// reachable reachable from `subject` through `subject_relation`.
message DelegationRelation  {
    Id object = 1;
    string relation = 2;
    Id subject = 3;
    string subject_relation = 4;
}

message UserData {
    optional google.protobuf.Any data = 1;
}
